fcc test passed

--- a/index.html
+++ b/index.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CodePen - Fork Me! FCC: Test Suite Template</title>
-  <link rel="stylesheet" href="style.css">  
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <div class="container">
+    <header id="header">
+      <img src="" alt="" id="header-img">
+      <nav id="nav-bar">
+        <a href="#features" class="nav-link">Features</a>
+        <a href="#works" class="nav-link">How It Works</a>
+        <a href="#pricing" class="nav-link">Pricing</a>
+      </nav>
+      <h3 id="header-heading">Handcrafted, home-made masterpieces</h3>
+    </header>
+    <div id="features">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestiae.</p>
+    </div>
+    <video width="40%" height="30%" id="video" controls>
+      <source src="https://youtube.com" type="video/mp4">
+    </video>
+    <form action="https://www.freecodecamp.com/email-submit" method="POST" id="form">
+      <label for="email">
+        Email
+      </label>
+      <input type="email" name="email" id="email" placeholder="Subscribe For News-Letter">
+      <input type="submit" value="Subscribe" id="submit">
+    </form>
 
-<div class="container">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione hic repellendus eum mollitia nam minus voluptatum quae distinctio deleniti nostrum! Doloribus eveniet non eos omnis, maiores dolores inventore pariatur earum?
-</div>
+    <div id="works">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe officiis quisquam omnis?
+      </p>
+    </div>
+
+    <div id="pricing">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ab sunt quisquam sint? Necessitatibus,
+        maiores!</p>
+    </div>
 
 
-<!-- partial:index.partial.html -->
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-<!-- 
-
+  </div>
+  <!-- partial:index.partial.html -->
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <!-- 
 Hello Camper!
-
 For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
-
 - The freeCodeCamp Team 
-
 -->
-<!-- partial -->
-  <script  src="./script.js"></script>
-
+  <!-- partial -->
+  <script src="./script.js"></script>
 </body>
+
 </html>
