--- a/index.html
+++ b/index.html
@@ -5,50 +5,122 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CodePen - Fork Me! FCC: Test Suite Template</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="container">
     <header id="header">
-      <img src="" alt="" id="header-img">
-      <nav id="nav-bar">
-        <a href="#features" class="nav-link">Features</a>
-        <a href="#works" class="nav-link">How It Works</a>
-        <a href="#pricing" class="nav-link">Pricing</a>
-      </nav>
+      <img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="" id="header-img">
       <h3 id="header-heading">Handcrafted, home-made masterpieces</h3>
+      <ul class="alig-rig">
+        <nav id="nav-bar" class="">
+          <li>
+            <a href="#features" class="nav-link">Features</a>
+          </li>
+          <li>
+            <a href="#works" class="nav-link">How It Works</a>
+          </li>
+          <li>
+            <a href="#pricing" class="nav-link">Pricing</a>
+          </li>
+        </nav>
+      </ul>
     </header>
     <div id="features">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestiae.</p>
+      <div class="feature-ele">
+        <i class="material-icons">check_circle</i>
+        <h6>Premium Materials</h6>
+        <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your
+          purchase. </p>
+      </div>
+      <div class="feature-ele">
+        <i class="material-icons">local_shipping</i>
+        <h6>Fast Shipping</h6>
+        <p> We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns
+          if you are not satisfied. </p>
+      </div>
+      <div class="feature-ele">
+        <i class="material-icons">verified_user</i>
+        <h6>Quality Assurance</h6>
+        <p> For every purchase you make, we will ensure there are no damages or faults and we will check and test the
+          pitch of your instrument. </p>
+      </div>
     </div>
     <video width="40%" height="30%" id="video" controls>
       <source src="https://youtube.com" type="video/mp4">
     </video>
+
+    <div id="pricing">
+
+      <div class="item">
+        <h5>Tenor Trombone</h5>
+        <h5>$600</h5>
+        <ul>
+          <li>Quality</li>
+          <li>Quality</li>
+          <li>Quality</li>
+          <li>Quality</li>
+        </ul>
+        <button>Select</button>
+      </div>
+
+      <div class="item">
+        <h5>Tenor Trombone</h5>
+        <h5>$600</h5>
+        <ul>
+          <li>Quality</li>
+          <li>Quality</li>
+          <li>Quality</li>
+          <li>Quality</li>
+        </ul>
+        <button>Select</button>
+      </div>
+
+      <div class="item">
+        <h5>Tenor Trombone</h5>
+        <h5>$600</h5>
+        <ul>
+          <li>Quality</li>
+          <li>Quality</li>
+          <li>Quality</li>
+          <li>Quality</li>
+        </ul>
+        <button>Select</button>
+      </div>
+    </div>
+
     <form action="https://www.freecodecamp.com/email-submit" method="POST" id="form">
-      <label for="email">
-        Email
-      </label>
-      <input type="email" name="email" id="email" placeholder="Subscribe For News-Letter">
-      <input type="submit" value="Subscribe" id="submit">
+      <h4>
+        Contact Us
+      </h4>
+      <div class="grid">
+        <label for="email" class="al-c">
+          Email
+        </label>
+        <input type="email" name="email" id="email" placeholder="Email">
+        <label for="message" class="al-c">
+          message
+        </label>
+        <textarea name="message" id="message" cols="30" rows="2" placeholder="Message"></textarea>
+        <input type="submit" value="Send" id="submit">
+      </div>
     </form>
 
     <div id="works">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe officiis quisquam omnis?
       </p>
     </div>
-
-    <div id="pricing">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ab sunt quisquam sint? Necessitatibus,
-        maiores!</p>
-    </div>
-
-
+    <footer>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nesciunt reiciendis, in non nobis, dignissimos
+      odio fugiat nemo possimus temporibus facilis! Velit sit ullam in accusamus laboriosam labore molestiae dolorum?
+    </footer>
   </div>
   <!-- partial:index.partial.html -->
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <!-- 
-Hello Camper!
+      Hello Camper!
 For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
 - The freeCodeCamp Team 
 -->
