video fixed design fixed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodePen - Fork Me! FCC: Test Suite Template</title>
+  <title>FreeCodeCamp.org-Project-03_Product-Landing-Page</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -48,12 +48,15 @@
           pitch of your instrument. </p>
       </div>
     </div>
-    <video width="40%" height="30%" id="video" controls>
-      <source src="https://youtube.com" type="video/mp4">
-    </video>
-
+    <div id="works">
+      <video width="560" height="315" id="video" controls>
+        <source src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc" type="">
+        <iframe width="560" height="315" id="video" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+        </iframe>
+      </source>
+      </video>
+    </div>
     <div id="pricing">
-
       <div class="item">
         <h5>Tenor Trombone</h5>
         <h5>$600</h5>
@@ -65,10 +68,9 @@
         </ul>
         <button>Select</button>
       </div>
-
       <div class="item">
-        <h5>Tenor Trombone</h5>
-        <h5>$600</h5>
+        <h5>Bass Trombone</h5>
+        <h5>$900</h5>
         <ul>
           <li>Quality</li>
           <li>Quality</li>
@@ -77,10 +79,9 @@
         </ul>
         <button>Select</button>
       </div>
-
       <div class="item">
-        <h5>Tenor Trombone</h5>
-        <h5>$600</h5>
+        <h5>Valve Trombone</h5>
+        <h5>$1200</h5>
         <ul>
           <li>Quality</li>
           <li>Quality</li>
@@ -90,7 +91,6 @@
         <button>Select</button>
       </div>
     </div>
-
     <form action="https://www.freecodecamp.com/email-submit" method="POST" id="form">
       <h4>
         Contact Us
@@ -107,14 +107,8 @@
         <input type="submit" value="Send" id="submit">
       </div>
     </form>
-
-    <div id="works">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe officiis quisquam omnis?
-      </p>
-    </div>
     <footer>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nesciunt reiciendis, in non nobis, dignissimos
-      odio fugiat nemo possimus temporibus facilis! Velit sit ullam in accusamus laboriosam labore molestiae dolorum?
+      Copyright Protected 2020 
     </footer>
   </div>
   <!-- partial:index.partial.html -->
